# QuadCpp

./: CMakeLists.txt  Readme.md  main.cpp
